--- a/package.json
+++ b/package.json
@@ -2,15 +2,27 @@
 	"name": "SearchVue",
 	"private": true,
 	"scripts": {
-		"test": "grunt test"
+		"test": "grunt test",
+		"lint:fix": "grunt fix"
 	},
 	"devDependencies": {
+		"@babel/preset-env": "^7.16.11",
+		"@vue/compat": "3.2.23",
+		"@vue/compiler-sfc": "3.2.23",
+		"@vue/test-utils": "2.0.0-rc.18",
+		"@vue/vue3-jest": "27.0.0-alpha.4",
+		"babel-core": "^6.26.3",
 		"eslint-config-wikimedia": "0.22.1",
-		"grunt": "1.5.2",
+		"eslint-plugin-vue": "^7.7.0",
+		"grunt": "1.4.0",
 		"grunt-banana-checker": "0.9.0",
-		"grunt-eslint": "24.0.0",
-		"grunt-stylelint": "0.17.0",
-		"stylelint-config-wikimedia": "0.13.0"
+		"grunt-eslint": "23.0.0",
+		"grunt-stylelint": "0.16.0",
+		"jquery": "^3.6.0",
+		"stylelint-config-wikimedia": "0.11.0",
+		"vue": "3.2.23",
+		"vuex": "4.0.2",
+		"wikimedia-ui-base": "0.18.0"
 	},
 	"eslintIgnore": [
 		"vendor/**"
