--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
 	"private": true,
 	"scripts": {
 		"test": "grunt test",
+		"test:unit": "jest",
 		"lint:fix": "grunt fix"
 	},
 	"devDependencies": {
@@ -12,8 +13,8 @@
 		"@vue/test-utils": "2.0.0-rc.18",
 		"@vue/vue3-jest": "27.0.0-alpha.4",
 		"babel-core": "^6.26.3",
-		"eslint-config-wikimedia": "0.22.1",
-		"eslint-plugin-vue": "9.1.1",
+		"eslint-config-wikimedia": "0.20.0",
+		"eslint-plugin-vue": "^7.7.0",
 		"grunt": "1.4.0",
 		"grunt-banana-checker": "0.9.0",
 		"grunt-eslint": "23.0.0",
