build: Upgrade jQuery test install to 3.6.1 to align with MediaWiki
Bug: T316516
Change-Id: Icfb0610fb033773a6385aa4fc8d7825d6bbe437b

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
 		"grunt-banana-checker": "0.9.0",
 		"grunt-eslint": "23.0.0",
 		"grunt-stylelint": "0.16.0",
-		"jquery": "^3.6.0",
+		"jquery": "3.6.1",
 		"stylelint-config-wikimedia": "0.11.0",
 		"vue": "3.2.23",
 		"vuex": "4.0.2",
