--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"grunt-banana-checker": "0.9.0",
 		"grunt-eslint": "23.0.0",
 		"grunt-stylelint": "0.16.0",
+		"jest-when": "^3.5.1",
 		"jquery": "3.6.1",
 		"stylelint-config-wikimedia": "0.11.0",
 		"vue": "3.2.23",
