Also trigger unit tests with 'npm test'
Change-Id: If418b4669c95cae6be3784ab7a2ca0a406526bea

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "SearchVue",
 	"private": true,
 	"scripts": {
-		"test": "grunt test",
+		"test": "grunt test && npm run test:unit",
 		"test:unit": "jest",
 		"lint:fix": "grunt fix"
 	},
