--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,3 +1,8 @@
 {
-	"extends": "stylelint-config-wikimedia"
+	"extends": "stylelint-config-wikimedia",
+	"rules": {
+		"declaration-property-unit-disallowed-list": null,
+		"declaration-property-value-disallowed-list": null,
+		"selector-pseudo-element-colon-notation": null
+	}
 }
