package.json: Add coverage command
This allows the codehealth pipeline to trigger coverage generation and ingest the results for display on sonarcloud.io

Change-Id: Ifca73e4fb8d44278969ff8b3813c0d320264b07b

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
 	"scripts": {
 		"test": "grunt test && npm run test:unit",
 		"test:unit": "jest",
-		"lint:fix": "grunt fix"
+		"lint:fix": "grunt fix",
+		"coverage": "npm run test:unit"
 	},
 	"devDependencies": {
 		"@babel/preset-env": "^7.16.11",
