build: Updating npm dependencies
* eslint-config-wikimedia: 0.20.0 → 0.24.0

Change-Id: Ib6dc5a77885b8fc320bc15ab1b7693e5621e517b

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -40,7 +40,11 @@
 				"vue/v-slot-style": [
 					"warn",
 					"shorthand"
-				]
+				],
+				"vue/multi-word-component-names": "warn",
+				"vue/no-undef-properties": "warn",
+				"vue/no-unused-refs": "warn",
+				"vue/camelcase": "warn"
 			}
 		}
 	]
