--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
 		"@babel/preset-env": "^7.16.11",
 		"@vue/compat": "3.2.37",
 		"@vue/compiler-sfc": "3.2.37",
-		"@vue/test-utils": "2.0.0-rc.18",
+		"@vue/test-utils": "2.3.2",
 		"@vue/vue3-jest": "27.0.0-alpha.4",
 		"babel-core": "^6.26.3",
 		"eslint-config-wikimedia": "0.25.0",
@@ -23,7 +23,8 @@
 		"jquery": "3.6.1",
 		"stylelint-config-wikimedia": "0.14.0",
 		"vue": "3.2.37",
-		"vuex": "4.0.2"
+		"vuex": "4.0.2",
+		"pinia": "2.0.16"
 	},
 	"eslintIgnore": [
 		"vendor/**"
