--- a/package.json
+++ b/package.json
@@ -23,8 +23,7 @@
 		"jquery": "3.6.1",
 		"stylelint-config-wikimedia": "0.14.0",
 		"vue": "3.2.37",
-		"vuex": "4.0.2",
-		"wikimedia-ui-base": "0.18.0"
+		"vuex": "4.0.2"
 	},
 	"eslintIgnore": [
 		"vendor/**"
