build: Updating eslint-config-wikimedia to 0.25.0
The following rules are failing and were disabled:
* mediawiki/msg-doc

Change-Id: Ie65f75819d74f84296a06d257a4c9e205b717982

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,7 +12,8 @@
 		"max-len": "off",
 		"no-jquery/variable-pattern": "off",
 		"no-jquery/no-event-shorthand": "off",
-		"compat/compat": "warn"
+		"compat/compat": "warn",
+		"mediawiki/msg-doc": "warn"
 	},
 	"overrides": [
 		{
