eslint: Use modern redirecting profile name, not dash-based alias
Change-Id: Id1ed132d3664982b03c8c7e10a6d0531bd1e72f9

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,7 @@
 {
 	"root": true,
 	"extends": [
-		"wikimedia/client-es6",
+		"wikimedia/client",
 		".eslintshared.json",
 		"wikimedia/mediawiki"
 	],
@@ -20,7 +20,7 @@
 	"overrides": [
 		{
 			"files": "**/*.vue",
-			"extends": "wikimedia/vue-es6",
+			"extends": "wikimedia/vue/es6",
 			"rules": {
 				"vue/html-self-closing": [
 					"error",
