build: Updating eslint-config-wikimedia to 0.29.1
The following rules are failing and were disabled:
* no-jquery/no-done-fail
* unicorn/prefer-includes

This also includes update to vue@.3.5.14 to resolve dependency error

Change-Id: Iec5570bda028760c0f983b932f2f272695d72af5

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,7 +15,9 @@
 		"compat/compat": "warn",
 		"mediawiki/msg-doc": "warn",
 		"implicit-arrow-linebreak": "warn",
-		"no-mixed-spaces-and-tabs": "warn"
+		"no-mixed-spaces-and-tabs": "warn",
+		"unicorn/prefer-includes": "warn",
+		"no-jquery/no-done-fail": "warn"
 	},
 	"overrides": [
 		{
