--- a/package.json
+++ b/package.json
@@ -11,13 +11,15 @@
 		"@babel/preset-env": "^7.16.11",
 		"@vue/compiler-sfc": "3.4.27",
 		"@vue/test-utils": "2.3.2",
-		"@vue/vue3-jest": "27.0.0-alpha.4",
+		"@vue/vue3-jest": "29.2.6",
 		"babel-core": "^6.26.3",
 		"eslint-config-wikimedia": "0.29.1",
 		"grunt": "1.6.1",
 		"grunt-banana-checker": "0.13.0",
 		"grunt-eslint": "24.3.0",
 		"grunt-stylelint": "0.20.1",
+		"jest": "29.7.0",
+		"jest-environment-jsdom": "29.7.0",
 		"jest-when": "^3.5.1",
 		"jquery": "3.7.1",
 		"pinia": "2.0.16",
